--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -4,7 +4,7 @@ targetSdk = "31"
 minSdk = "23"
 retrofit = "2.9.0"
 okhttp = "4.9.3"
-connect = "0.2.1"
+connect = "0.2.3"
 
 [libraries]
 #official
@@ -21,8 +21,13 @@ recyclerview = "androidx.recyclerview:recyclerview:1.2.0"
 
 glide-core = "com.github.bumptech.glide:glide:4.13.2"
 glide-compiler = "com.github.bumptech.glide:compiler:4.13.2"
+coil = "io.coil-kt:coil:2.0.0-rc03"
+coil-svg = "io.coil-kt:coil-svg:2.0.0-rc03"
+coil-gif = "io.coil-kt:coil-gif:2.0.0-rc03"
+zxing-barcodescanner = "com.github.bingoogolapple.BGAQRCode-Android:zxing:1.3.8"
+
 #libs
-particle-auth = "network.particle:auth-service:0.5.8"
+particle-auth = "network.particle:auth-service:0.5.9"
 connect-common = { module = "network.particle:connect-common", version.ref = "connect" }
 connect = { module = "network.particle:connect", version.ref = "connect" }
 connect-evm-adapter = { module = "network.particle:connect-evm-adapter", version.ref = "connect" }
@@ -41,7 +46,6 @@ recyclerview-adapter = "com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7"
 junit = "junit:junit:4.13.2"
 junit-ext = "androidx.test.ext:junit:1.1.3"
 espresso-core = "androidx.test.espresso:espresso-core:3.4.0"
-navigation-testing = { module = "androidx.navigation:navigation-testing", version.ref = "nav_version" }
 [bundles]
 retrofit = ["retrofit", "retrofit-converter-gson", "retrofit-converter-moshi"]
 okhttp3 = ["okhttp3", "okhttp3-logging-interceptor"]
