--- a/gradle.properties
+++ b/gradle.properties
@@ -21,5 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-
+android.injected.testOnly=false
 android.enableJetifier=true
+
+org.gradle.java.home = /Applications/Android Studio.app/Contents/jre/Contents/Home
