--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -11,6 +11,7 @@ auth = "0.9.1"
 [libraries]
 #particle sdk
 particle-auth =  { module = "network.particle:auth-service", version.ref = "auth" }
+particle-api =  { module = "network.particle:api-service", version.ref = "auth" }
 connect-common = { module = "network.particle:connect-common", version.ref = "connect" }
 connect = { module = "network.particle:connect", version.ref = "connect" }
 connect-evm-adapter = { module = "network.particle:connect-evm-adapter", version.ref = "connect" }
