update connect examples

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.connect.demo">
-
-    <queries>
-        ...
-        <package android:name="coin98.crypto.finance.media" />
-    </queries>
 
     <application
         android:name=".App"
@@ -14,7 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/ParticleConnect">
+        android:fullBackupContent="@xml/backup_rules"
+        tools:replace="android:fullBackupContent"
+        android:theme="@style/ParticleConnect"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".controller.secret.ImportWalletActivity"
             android:exported="false"
@@ -22,8 +21,17 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".controller.reference.ReferenceActivity"
-            android:exported="false"
-            android:theme="@style/ParticleConnect" />
+            android:exported="true"
+            android:theme="@style/ParticleConnect">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="particlewc" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".controller.manage.ManageActivity"
             android:exported="false"
@@ -34,15 +42,17 @@
             android:theme="@style/ParticleConnect">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- Particle Network config start -->
+
+        </activity>
+        <!-- Particle Network config start -->
         <activity
-            android:name="com.particle.network.controller.WebActivity"
+            android:name="com.particle.auth.controller.WebActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="true"
             android:launchMode="singleTask"
-            android:theme="@style/ThemeAuthWeb">>
+            android:theme="@style/ThemeAuthWeb">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -51,13 +61,17 @@
 
                 <data android:scheme="pn${PN_APP_ID}" />
             </intent-filter>
-        </activity> <!-- Particle Connect Redirect Callback -->
+        </activity>
+        <!-- Particle Connect Redirect Callback -->
         <activity
             android:name="com.connect.common.controller.RedirectActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="true"
             android:launchMode="singleTask"
             android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <data android:scheme="pn_connect_demo" />
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -77,5 +91,8 @@
             android:name="particle.network.project_id"
             android:value="${PN_PROJECT_ID}" />
     </application>
+    <queries>
+        <package android:name="com.apollox.android" />
+    </queries>
 
 </manifest>
