--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,5 @@ android.nonTransitiveRClass=true
 android.injected.testOnly=false
 android.enableJetifier=true
 
-org.gradle.java.home = /Applications/Android Studio.app/Contents/jre/Contents/Home
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
